--- a/main.css
+++ b/main.css
@@ -15,11 +15,30 @@ body, html {
 	font-size: 20px;
 }
 
-#intro h1 {
-  font-family: 'EB Garamond', serif;
-  padding-top: 24%;
-  padding-bottom: 4%;
-  font-size: 90px;
+@media (min-width: 1024px){
+  #intro h1 {
+    font-family: 'EB Garamond', serif;
+    padding-top: 24%;
+    padding-bottom: 4%;
+    font-size: 90px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  #intro h1 {
+    font-family: 'EB Garamond', serif;
+    padding-top: 70%;
+    padding-bottom: 5%;
+    font-size: 90px;
+  }
+}
+@media (max-width: 768px){
+  #intro h1 {
+    font-family: 'EB Garamond', serif;
+    padding-top: 70%;
+    padding-bottom: 3%;
+    font-size: 90px;
+  }
 }
 
 #intro p{
@@ -43,12 +62,27 @@ body, html {
   padding: 10px;
 }
 
-.worklogo {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  -webkit-border-radius: 25%;
-  -moz-border-radius: 25%;
-  border-radius: 15%;
+@media (min-width: 480px){
+  .worklogo {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    -webkit-border-radius: 25%;
+    -moz-border-radius: 25%;
+    border-radius: 15%;
+  }
+}
+
+@media (max-width: 480px){
+  .worklogo {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    -webkit-border-radius: 25%;
+    -moz-border-radius: 25%;
+    border-radius: 15%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 #njitlogo {
@@ -260,26 +294,52 @@ body, html {
   margin: 0px 0px;
 }
 
-.location {
-  float: right;
-  font-size: 22px;
-  margin: 0px 0px;
-  padding-top: 15px;
-}
 
+
+@media (min-width: 480px){
+  .location {
+    float: right;
+    font-size: 22px;
+    margin: 0px 0px;
+    padding-top: 15px;
+  }
+}
+@media (max-width: 480px){
+  .location {
+    float: left;
+    font-size: 22px;
+    margin: 0px 0px;
+    padding-top: 15px;
+  }
+}
+@media (max-width: 480px){
+  .htclocation {
+    float: right !important;
+    font-size: 22px;
+    margin: 0px 0px;
+    padding-top: 15px;
+  }
+}
 .title {
   font-size: 17px; 
   font-style: italic;
   float: left;
   margin: 2px 0px;
 }
-
-.duration {
-  float: right;
-  font-size: 17px;
-  margin: 2px 0px;
+@media (min-width: 480px){
+  .duration {
+    float: right;
+    font-size: 17px;
+    margin: 2px 0px;
+  }
 }
-
+@media (max-width: 480px){
+.duration {
+    float: left;
+    font-size: 17px;
+    margin: 2px 0px;
+  }
+}
 .work {
   padding: 4px 0 1px 0;
 }
@@ -318,17 +378,48 @@ body, html {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     text-align: right;
 }
-
-/* Modal Content */
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    padding-top: 10px;
-    border: 1px solid #888;
-    width: 50%;
-    box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3)
+@media (min-width: 1024px){
+  /* Modal Content */
+  .modal-content {
+      background-color: #fefefe;
+      margin: auto;
+      padding: 20px;
+      padding-top: 10px;
+      border: 1px solid #888;
+      width: 50%;
+      box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3)
+  }
 }
+@media (min-width: 375px) and (max-width: 1024px){
+/* Modal Content */
+  .modal-content {
+      background-color: #fefefe;
+      margin: auto;
+      padding: 10px;
+      padding-top: 5px;
+      border: 1px solid #888;
+      width: 90%;
+      box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3)
+  }
+}
+
+@media (max-width: 375px){
+/* Modal Content */
+  .modal-content {
+      background-color: black;
+      margin: 4px;
+      padding: 8px;
+      padding-top: 2px;
+      border: 1px solid #888;
+      width: 90%
+      box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3)
+  }
+  #volunteerImg {
+    width: 100%;
+    padding: 1px;
+  }
+}
+
 
 /* The Close Button */
 .close {
@@ -345,21 +436,48 @@ body, html {
     cursor: pointer;
 }
 
-.img-responsive {
-  width: 100%;
-}
 
-.modal-p {
-  text-align: left;
-  font-size: 15px;
-  padding-top: 10px;
+@media (min-width: 480px){
+  .modal-p {
+    text-align: left;
+    font-size: 15px;
+    padding-top: 10px;
+  }
 }
-
-.modal-content a {
-  text-align: left;
+@media (max-width: 480px){
+  .modal-p {
+    text-align: left;
+    font-size: 12px;
+    padding-top: 10px;
+  }
 }
-
+@media (min-width: 480px){
+  .modal-content a {
+    text-align: left;
+  }
+}
+@media (max-width: 480px){
+  .modal-content a {
+    text-align: left;
+    font-size: 11px;
+  }
+}
 
 .workdescription {
   font-family: 'Quattrocento Sans', sans-serif;
 }
+
+@media (max-width: 320px){
+.development img {
+  width: 45%;
+  height: auto;
+  padding: 8px;
+}
+
+@media (max-width: 340px){
+.volunteerWork img {
+  width: 45%;
+  height: auto;
+  padding: 10px;
+}
+
