--- a/main.css
+++ b/main.css
@@ -105,11 +105,31 @@ body, html {
 .dicon:hover {
   filter: grayscale(0%);
 }
-
-.vicon {
-  padding: 20px;  
-  filter: opacity(75%);
-  cursor: pointer;
+@media (min-width: 768px){
+  .vicon {
+    height: auto;
+    padding: 20px;
+    filter: opacity(75%);
+    cursor: pointer;
+  }  
+}
+@media (min-width: 320px) and (max-width: 768px){
+  .vicon {
+    width: 23%;
+    height: auto;
+    padding: 8px;  
+    filter: opacity(75%);
+    cursor: pointer;
+  }
+}
+@media (max-width: 320px){
+  .vicon {
+    width: 45%;
+    height: auto;
+    padding: 8px;  
+    filter: opacity(75%);
+    cursor: pointer;
+  }
 }
 
 .vicon:hover {
@@ -402,10 +422,6 @@ body, html {
       width: 90%
       box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3)
   }
-  #volunteerImg {
-    width: 100%;
-    padding: 1px;
-  }
 }
 
 
@@ -454,18 +470,17 @@ body, html {
 .workdescription {
   font-family: 'Quattrocento Sans', sans-serif;
 }
+@media (min-width: 320px) and (max-width: 768px){
+.development img {
+  width: 18%;
+  height: auto;
+  padding: 2px;
+}
 
 @media (max-width: 320px){
 .development img {
-  width: 45%;
+  width: 30%;
   height: auto;
   padding: 8px;
-}
-
-@media (max-width: 340px){
-.volunteerWork img {
-  width: 45%;
-  height: auto;
-  padding: 10px;
 }
 
